@@ -1,2 +1,2 @@
-VERSION=2.04.00
+VERSION=2.04.01
 YEARS=2005-2009
