@@ -1,3 +1,8 @@
+bobcat (2.04.01)
+
+  * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
+'size_t *s' causing problems on 64-bit archs (e.g. amd64). Now fixed.
+
 bobcat (2.04.00)
 
   * BigInt has been enhanced and extended. Many members have received new 
